Make email tooltip responsive, add to intro, swap out thumbnails, fix project text align

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -605,7 +605,7 @@ $size-header-pad: 4em;
 			height: 100%;
 			left: 0;
 			// opacity: 0.5;
-			opacity: 0.1;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -1653,9 +1653,9 @@ $size-header-pad: 4em;
 /* Tooltip text */
 .tooltip1 .tooltiptext1 {
   visibility: hidden;
-  width: 220px;
-  /* background-color: black;
-  color: #fff; */
+  width: 14vw;
+  background-color: #f7f7f7;
+  color: #49bf9d; 
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
@@ -1663,8 +1663,9 @@ $size-header-pad: 4em;
   /* Position the tooltip text - see examples below! */
   position: absolute;
 	z-index: 1;
-	top: 25px;
-  left: -10%;
+	top: 100%;
+	left: -5%;
+	border: 1px solid black;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
@@ -1683,8 +1684,8 @@ $size-header-pad: 4em;
 /* Tooltip text */
 .tooltip2 .tooltiptext2 {
   visibility: hidden;
-  width: 220px;
-  // background-color: black;
+  width: 14vw;
+  background-color: #f7f7f7;
   color: #49bf9d; 
   text-align: center;
   padding: 5px 0;
@@ -1693,8 +1694,9 @@ $size-header-pad: 4em;
   /* Position the tooltip text - see examples below! */
   position: absolute;
 	z-index: 1;
-	top: -60px;
-	left: -100px;
+	left: -380%;
+	bottom: 100%;
+	border: 1px solid black;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
